--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 
 
 <div class="">
-<img src="/img/img1.png" class="ms-6 rounded-top" >
-<img src="/img/img2.png" class="ms-4 rounded-top">
+<img src="img1.png" class="ms-6 rounded-top" >
+<img src="img2.png" class="ms-4 rounded-top">
 </div>
 
 <div class="mt-3">
@@ -74,8 +74,8 @@
 </div>
 
 <div>
-<img src="/img/img3.png" class="ms-6 rounded-top mt-4">
-<img src="/img/img4.png" class="ms-4 rounded-top mt-4">
+<img src="img3.png" class="ms-6 rounded-top mt-4">
+<img src="img4.png" class="ms-4 rounded-top mt-4">
 </div>
 
 <div class="mt-3">
@@ -96,8 +96,8 @@
   </div>
 
 <div>
-    <img src="/img/img5.png" class="ms-6 rounded-top mt-4">
-    <img src="/img/img6.png" class="ms-4 rounded-top mt-4">
+    <img src="img5.png" class="ms-6 rounded-top mt-4">
+    <img src="img6.png" class="ms-4 rounded-top mt-4">
 </div>
 
 <div class="mt-3">
@@ -117,8 +117,8 @@
 </div>
 
 <div>
-    <img src="/img/img7.png" class="ms-6 rounded-top mt-4">
-    <img src="/img/img8.png" class="ms-4 rounded-top mt-4">
+    <img src="img7.png" class="ms-6 rounded-top mt-4">
+    <img src="img8.png" class="ms-4 rounded-top mt-4">
 </div>
 
 <div class="mt-3">
@@ -138,8 +138,8 @@
 </div>
 
 <div>
-  <img src="/img/img9.png" class="ms-6 rounded-top mt-4">
-  <img src="/img/img10.png" class="ms-4 rounded-top mt-4">
+  <img src="img9.png" class="ms-6 rounded-top mt-4">
+  <img src="img10.png" class="ms-4 rounded-top mt-4">
 </div>
 
 <div class="mt-3">
@@ -159,8 +159,8 @@
 </div>
 
 <div>
-  <img src="/img/img11.png" class="ms-6 rounded-top mt-4">
-  <img src="/img/img12.png" class="ms-4 rounded-top mt-4">
+  <img src="img11.png" class="ms-6 rounded-top mt-4">
+  <img src="img12.png" class="ms-4 rounded-top mt-4">
 </div>
 
 <div class="mt-3">
@@ -180,8 +180,8 @@
 </div>
 
 <div>
-  <img src="/img/img13.png" class="ms-6 rounded-top mt-4">
-  <img src="/img/img14.png" class="ms-4 rounded-top mt-4">
+  <img src="img13.png" class="ms-6 rounded-top mt-4">
+  <img src="img14.png" class="ms-4 rounded-top mt-4">
 </div>
 
 <div class="mt-3">
@@ -211,13 +211,13 @@
 <section class="w-85 ">
 
   <div class="bg-white border rounded h-25 ms-6 width d-inline-flex px-3 py-2  ">
-    <img src="/img/Icon.png" class=" ms-2   py-5 px-2 ">
+    <img src="Icon.png" class=" ms-2   py-5 px-2 ">
     <p class=" ms-2 h5 px-3 py-5 "> Inspiration</p>
   </div>
 
   <div class="bg-white border rounded h-25 ms-2 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (1).png" class="py-5 px-3">
+    <img src="Icon (1).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Resource</p>
   
    </div>
@@ -225,7 +225,7 @@
    
   <div class="bg-white border rounded h-25 ms-2 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (2).png" class="py-5 px-3">
+    <img src="Icon (2).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Announcements</p>
   
   </div>
@@ -233,7 +233,7 @@
   
   <div class="bg-white border rounded h-25 ms-2 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (3).png" class="py-5 px-3">
+    <img src="Icon (3).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Entrepreneurship</p>
   
    </div>
@@ -246,26 +246,26 @@
 
   <div class="bg-white border rounded h-25 ms-6 mt-3 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (4).png" class="py-5 px-3">
+    <img src="Icon (4).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Tutorials</p>
   
    </div>
 
    <div class="bg-white border rounded h-25 ms-2 mt-3 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (5).png" class="py-5 px-3">
+    <img src="Icon (5).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Freelancing</p>
    </div>
 
    <div class="bg-white border rounded h-25 ms-2 mt-3 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (6).png" class="py-5 px-3">
+    <img src="Icon (6).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Design Process </p>
    </div>
 
    <div class="bg-white border rounded h-25 ms-2 mt-3 width d-inline-flex px-3 py-2 ">
 
-    <img src="img/Icon (7).png" class="py-5 px-3">
+    <img src="Icon (7).png" class="py-5 px-3">
     <p class=" ms-2 h5 py-5"> Web Design </p>
    </div>
 
