--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 
 <div class="">
-<img src="img1.png" class="ms-6 rounded-top" >
+<img src="img/img1.png" class="ms-6 rounded-top" >
 <img src="img2.png" class="ms-4 rounded-top">
 </div>
 
