--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
   <div class="container-xxl">
     <div class="container mt-4">
 
-  <header class="sticky-top">
-    <nav class="navbar navbar-expand-lg bg-white">
-      <div class="container-xxl">
+  <header class="sticky-top navbar navbar-expand-lg bg-white"">
+        <img src="img/logo.png" alt="">
         <a class="navbar-brand" href="index.html"><i class="logo"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,7 +44,6 @@
           <a href="/"><i class="bi bi-search"></i></a>
         </div>
       </div>
-    </nav>
   </header>
 
 
@@ -255,17 +253,17 @@
 
         <footer class="m-4 bg-body mt-6">
           <section class="row">
-            <div class="col-4 mt-6">
+            <div class="col-6 col-md-4 mt-6">
               <img src="./img/Group 13.svg" class="logo-2 ">
             </div>
-            <div class="col-4 footer d-inline-flex mt-6 ">
+            <div class="col-6 col-md-4 footer d-inline-flex mt-6 ">
               <img src="./img/Vk.svg">
               <img src="./img/Pinterest.svg">
               <img src="./img/Instagram.svg">
               <img src="./img/Twitter.svg">
               <img src="./img/Facebook.svg">
       </div>
-      <div class="col-4 d-inline-flex mt-6" >
+      <div class="col-12 col-md-4 d-inline-flex mt-6" >
       <p class="gray">All Rights Reserved 2018 3layers</p>
     </div>
             </div>
