--- a/post.html
+++ b/post.html
@@ -11,10 +11,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
       </head>
 <body class="container-xxl">
-    <header class="sticky-top">
-        <nav class="navbar navbar-expand-lg bg-white">
+    <header class="sticky-top navbar navbar-expand-lg bg-white">
           <div class="container-xxl">
-            <a class="navbar-brand" href="index.html"><i class="logo"></i></a>
+            <img src="/img/logo.png" alt="">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -40,7 +39,7 @@
               <a href="/"><i class="bi bi-search"></i></a>
             </div>
           </div>
-        </nav>
+      
       </header>
     
     <section>
@@ -161,17 +160,17 @@
             </section>
                 <footer class="m-4 bg-body mt-6">
                     <section class="row">
-                      <div class="col-4 mt-6">
+                      <div class="col-6 col-md-4 mt-6">
                         <img src="./img/Group 13.svg" class="logo-2 ">
                       </div>
-                      <div class="col-4 footer d-inline-flex mt-6 ">
+                      <div class="col-6 col-md-4 footer  mt-6 ">
                         <img src="./img/Vk.svg">
                         <img src="./img/Pinterest.svg">
                         <img src="./img/Instagram.svg">
                         <img src="./img/Twitter.svg">
                         <img src="./img/Facebook.svg">
                 </div>
-                <div class="col-4 d-inline-flex mt-6" >
+                <div class="col-12 col-md-4 d-inline-flex mt-6" >
                 <p class="gray">All Rights Reserved 2018 3layers</p>
               </div>
                       </div>
