--- a/post.html
+++ b/post.html
@@ -12,8 +12,8 @@
       </head>
 <body class="container-xxl">
     <header class="sticky-top navbar navbar-expand-lg bg-white">
-          <div class="container-xxl">
-            <img src="/img/logo.png" alt="">
+            <img src="img/logo.png" alt="">
+            <a class="navbar-brand" href="index.html"><i class="logo"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
