--- a/post.html
+++ b/post.html
@@ -13,7 +13,7 @@
 <body class="container-xxl">
     <header class="sticky-top navbar navbar-expand-lg bg-white">
             <img src="img/logo.png" alt="">
-            <a class="navbar-brand" href="index.html"><i class="logo"></i></a>
+            <a class="navbar-brand" href="index.html"><i class=""></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,6 @@
           </div>
       
       </header>
-    
     <section>
 
         <div class="mt-6 text-center">
