--- a/post.html
+++ b/post.html
@@ -12,7 +12,7 @@
       </head>
 <body class="container-xxl">
     <header class="sticky-top navbar navbar-expand-lg bg-white">
-            <img src="img/logo.png" alt="">
+            <img src="img/logo.svg" alt="">
             <a class="navbar-brand" href="index.html"><i class=""></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
