--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <div class="new img1"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> How to Reinstall WordPress: 5 Different Methods Depending On Your Needs</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> How to Reinstall WordPress: 5 Different Methods Depending On Your Needs</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
 
