--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="new img2"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Web page layout 101: website anatomy every designer needs to learn</p>
+          <a  href="post.html" class="d-inline-flex mt-2 h4"> Web page layout 101: website anatomy every designer needs to learn</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -89,7 +89,7 @@
           <div class="new img3 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Website Downtime: Applicable Tips on How to Prevent It</p>
+          <a  href="post.html" class="d-inline-flex mt-2 h4"> Website Downtime: Applicable Tips on How to Prevent It</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -98,7 +98,7 @@
           <div class="new img4 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> 6 Ways to Leverage Facebook for Marketing Success</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> 6 Ways to Leverage Facebook for Marketing Success</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -107,7 +107,7 @@
           <div class="new img5 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Updating WooCommerce: A Safe and In-Depth Guide</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> Updating WooCommerce: A Safe and In-Depth Guide</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -116,7 +116,7 @@
           <div class="new img6 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> WP-CLI v2 – Managing WordPress From the Terminal</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> WP-CLI v2 – Managing WordPress From the Terminal</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -125,7 +125,7 @@
           <div class="new img7 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Social Media Image Sizes and Quick Tips for WordPress Users</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> Social Media Image Sizes and Quick Tips for WordPress Users</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -134,7 +134,7 @@
           <div class="new img8 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> How to Create Outstanding Long-Form Articles in WordPress</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> How to Create Outstanding Long-Form Articles in WordPress</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -143,7 +143,7 @@
           <div class="new img9 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> How to Use Fiverr to Reduce Business Busywork</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> How to Use Fiverr to Reduce Business Busywork</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -152,7 +152,7 @@
           <div class="new img10 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Email Marketing Best Practices for Sending Better Emails</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> Email Marketing Best Practices for Sending Better Emails</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -161,7 +161,7 @@
           <div class="new img11 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Google Site Verification: 7 Ways to Verify With Search Console</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> Google Site Verification: 7 Ways to Verify With Search Console</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -170,7 +170,7 @@
           <div class="new img12 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> Twitter Marketing Strategies to Beef up Your Social Game</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> Twitter Marketing Strategies to Beef up Your Social Game</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -179,7 +179,7 @@
           <div class="new img13 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> The Ultimate Step-by-Step Guide on Website Usability Testing</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> The Ultimate Step-by-Step Guide on Website Usability Testing</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -188,7 +188,7 @@
           <div class="new img14 mt-4"></div>
           <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
           PROCESS</cite>
-          <p class="d-inline-flex mt-2 h4"> 8 Ways To Leverage LinkedIn for Marketing Success</p>
+          <a href="post.html" class="d-inline-flex mt-2 h4"> 8 Ways To Leverage LinkedIn for Marketing Success</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
         </div>
@@ -248,8 +248,14 @@
 
           <p>Get free web design insights...</p>
           <p class="fs-6">In your inbox, every other week. And unsubscribe in a click, if you want.</p>
-          <input type="text" placeholder="Your email" class="border rounded-pill py-3 fs-5 px-4 ">
+          
         </div>
+
+        <div class="input-group mb-3 ">
+          <input type="text" class="form-control rounded-pill" placeholder="Your email" aria-label="Your email" aria-describedby="basic-addon2">
+          <button type="submit"  class="input-group-text rounded-pill bg-danger text-white py-3 px-3" id="basic-addon2">Subscribe</button>
+        </div>
+        
 
         <footer class="m-4 bg-body mt-6">
           <section class="row">
