--- a/post.html
+++ b/post.html
@@ -24,7 +24,7 @@
                   <a href="post.html">Popular</a>
                 </li>
                 <li class="nav-item m-2">
-                  <a href="post.html">New</a>
+                  <a href="index.html">New</a>
                 </li>
                 <li class="nav-item m-2">
                   <a href="post.html">Reading List</a>
@@ -156,7 +156,7 @@
                     our guide to why you should be doing it — and how to get started.</p>
                 </div>
 
-                <section class="col-10 col-md-6 mx-auto shadow rounded mt-4">
+                <section class="col-10 col-md-6 mx-auto shadow rounded mt-5">
                 <form class="py-5 mx-auto">
                     <div class="row">
                     <div class="mx-auto col-10">
