--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="post.html">Popular</a>
             </li>
             <li class="nav-item m-2">
-              <a class="active" href="post.html">New</a>
+              <a class="active" href="index.html">New</a>
             </li>
             <li class="nav-item m-2">
               <a href="post.html">Reading List</a>
