--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
       <div class="row">
 
         <div class="col-md-6 col-12">
-
           <div class="new img1"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> How to Reinstall WordPress: 5 Different Methods Depending On Your Needs</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -78,8 +78,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img2"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+          <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+          PROCESS</cite></div>
           <a  href="post.html" class="d-inline-flex mt-2 h4"> Web page layout 101: website anatomy every designer needs to learn</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -87,8 +88,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img3 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a  href="post.html" class="d-inline-flex mt-2 h4"> Website Downtime: Applicable Tips on How to Prevent It</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -96,8 +98,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img4 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> 6 Ways to Leverage Facebook for Marketing Success</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -105,8 +108,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img5 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> Updating WooCommerce: A Safe and In-Depth Guide</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -114,8 +118,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img6 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> WP-CLI v2 – Managing WordPress From the Terminal</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -123,8 +128,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img7 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> Social Media Image Sizes and Quick Tips for WordPress Users</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -132,8 +138,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img8 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> How to Create Outstanding Long-Form Articles in WordPress</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -141,8 +148,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img9 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> How to Use Fiverr to Reduce Business Busywork</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -150,8 +158,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img10 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> Email Marketing Best Practices for Sending Better Emails</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -159,8 +168,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img11 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> Google Site Verification: 7 Ways to Verify With Search Console</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -168,8 +178,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img12 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> Twitter Marketing Strategies to Beef up Your Social Game</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -177,8 +188,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img13 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> The Ultimate Step-by-Step Guide on Website Usability Testing</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -186,8 +198,9 @@
 
         <div class="col-md-6 col-12">
           <div class="new img14 mt-4"></div>
-          <cite class="text-black-50">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
-          PROCESS</cite>
+          <div class="mt-3">
+            <cite class="text-black-50 mt-5">BY</cite> TOMAS LAURINAVINICUS <cite class="text-black-50">IN</cite> DESIGN
+            PROCESS</cite></div>
           <a href="post.html" class="d-inline-flex mt-2 h4"> 8 Ways To Leverage LinkedIn for Marketing Success</a>
           <p class="d-inline-flex   mt-3 text-black-50">User research is the reality check every project needs. Here’s
             our guide to why you should be doing it — and how to get started.</p>
@@ -202,43 +215,43 @@
           <p>All topics</p>
         </div>
 
-        <div class="bg-white  rounded d-inline-flex px-3  row ">
-          <div class="col-lg-3  border   topics px-3 py-3 ">
+        <div class="bg-white  rounded d-inline-flex px-3  row ps-2  ">
+          <div class="col-lg-2  border mt-4 shadow py-4 px-3 topics  p-2  ">
             <i class="bi bi-lightbulb-fill fs-4"></i>
-            <p class=" ms-2 h5 mt-0 d-inline-flex "> Inspiration</p>
+            <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Inspiration</p>
           </div>
 
-          <div class="col-lg-3  border mt-4  py-4 px-3 topics  ">
+          <div class="col-md-2 ms-2 shadow  border mt-4  py-4 px-3 topics p-4  ">
             <i class="bi bi-geo-alt-fill fs-4"></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Resource</p>
           </div>
 
-          <div class="col-lg-3 border mt-4  py-4 px-3 topics">
-            <i class="bi bi-megaphone fs-4 "></i>
+          <div class="col-lg-3 border mt-4 shadow ms-2  py-4 px-2 topics">
+            <i class="bi bi-megaphone fs-4 px-0"></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Announcements</p>
           </div>
 
-          <div class="col-lg-3 border mt-4  py-4 px-3 topics  ">
+          <div class="col-lg-3 border mt-4 ms-2 shadow py-4 px-3 topics  ">
             <i class="bi bi-rocket-takeoff-fill fs-4 "></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Entrepreneurship</p>
           </div>
 
-          <div class="col-lg-3 border mt-4   py-4 px-3 topics  ">
+          <div class="col-md-2 border mt-4 shadow  py-4 px-3 topics  ">
             <i class="bi bi-shield-check fs-4 "></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Tutorials</p>
           </div>
 
-          <div class="col-lg-3 border mt-4  py-4 px-3 topics  ">
+          <div class="col-lg-2 ms-2 border mt-4 shadow  py-4 px-3 topics  ">
             <i class="bi bi-bell fs-4 "></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Freelancing</p>
           </div>
 
-          <div class="col-lg-3 border  mt-4 py-4 px-3 topics  ">
+          <div class="col-lg-3 border ms-2 shadow  mt-4 py-4 px-3 topics  ">
             <i class="bi bi-scissors fs-4 "></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Design Process</p>
           </div>
 
-          <div class="col-lg-3 border mt-4  py-4 px-3 topics  ">
+          <div class="col-lg-3 ms-2 border shadow mt-4  py-4 px-3 topics  ">
             <i class="bi bi-window-stack fs-4 "></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Web Dessign</p>
           </div>
@@ -251,7 +264,7 @@
           
         </div>
 
-        <div class="input-group mb-3 ">
+        <div class="input-group mb-3 shadow rounded-pill">
           <input type="text" class="form-control rounded-pill" placeholder="Your email" aria-label="Your email" aria-describedby="basic-addon2">
           <button type="submit"  class="input-group-text rounded-pill bg-danger text-white py-3 px-3" id="basic-addon2">Subscribe</button>
         </div>
@@ -263,11 +276,11 @@
               <img src="./img/Group 13.svg" class="logo-2 ">
             </div>
             <div class="col-6 col-md-4 footer d-inline-flex mt-6 ">
-              <img src="./img/Vk.svg">
-              <img src="./img/Pinterest.svg">
-              <img src="./img/Instagram.svg">
-              <img src="./img/Twitter.svg">
-              <img src="./img/Facebook.svg">
+              <img src="./img/Vk.svg" class="topics-hov">
+              <img src="./img/Pinterest.svg" class="topics-hov">
+              <img src="./img/Instagram.svg" class="topics-hov">
+              <img src="./img/Twitter.svg" class="topics-hov">
+              <img src="./img/Facebook.svg" class="topics-hov">
       </div>
       <div class="col-12 col-md-4 d-inline-flex mt-6" >
       <p class="gray">All Rights Reserved 2018 3layers</p>
