--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container mt-4">
 
   <header class="sticky-top navbar navbar-expand-lg bg-white"">
-        <img src="img/logo.png" alt="">
+        <img src="img/logo.svg" class="topics-hov">
         <a class="navbar-brand" href="index.html"><i class="logo"></i></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -251,7 +251,7 @@
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Design Process</p>
           </div>
 
-          <div class="col-lg-3 ms-2 border shadow mt-4  py-4 px-3 topics  ">
+          <div class="col-md-3 ms-2 border shadow mt-4  py-4 px-3 topics  ">
             <i class="bi bi-window-stack fs-4 "></i>
             <p class=" ms-2 h5 mt-0 d-inline-flex py-0"> Web Dessign</p>
           </div>
@@ -273,7 +273,7 @@
         <footer class="m-4 bg-body mt-6">
           <section class="row">
             <div class="col-6 col-md-4 mt-6">
-              <img src="./img/Group 13.svg" class="logo-2 ">
+              <img src="./img/Group 13.svg" class="logo-2 topics-hov ">
             </div>
             <div class="col-6 col-md-4 footer d-inline-flex mt-6 ">
               <img src="./img/Vk.svg" class="topics-hov">
