--- a/post.html
+++ b/post.html
@@ -72,8 +72,8 @@
         <img src="./img/post2img1.png" class="new w-75 rounded-4 mx-auto d-block">
             
         </div>
-        <img src="/img/eye.svg" class="ms-3">
-            <img src="/img/25 K.svg" class="ms-3">
+        <img src="./img/eye.svg" class="ms-3">
+            <img src="./img/25 K.svg" class="ms-3">
         <div class="mt-4 fs-5">
             <p>People’s quest for creating websites has easily taken us to a new era of site development. Where, with the availability of robust page building tools, creating websites has become a lot more fun (especially for non-developers). The multitude of tools and plugins available to you is vast when you try building websites on WordPress. Today we’ll explore a new one, <span class="text-primary"> WP Page Builder.</span> If you’re tired of the same old page builder plugins, this is one you should try out.</p>
 
@@ -190,7 +190,7 @@
                         </div>
                         <div class="row">
                           <div class=" mx-auto col-10">
-                            <button class="rounded-pill bg-danger text-white border-0 px-3 py-2" type="submit">Post Comment</button>
+                            <button class="rounded-pill bg-danger text-white border-0 px-3 py-2 topics-hov" type="submit">Post Comment</button>
                           </div>
                         </div>
                         
