--- a/post.html
+++ b/post.html
@@ -65,8 +65,8 @@
            
 
             </div>
-            <img src="/img/Shape.svg" class="d-inline-flex mt-2 ms-3 ">
-            <img src="/img/12 K.svg" class="mt-2 ">
+            <img src="./img/Shape.svg" class="d-inline-flex mt-2 ms-3 ">
+            <img src="./img/12 K.svg" class="mt-2 ">
             
         <div class="row mt-2">
         <img src="./img/post2img1.png" class="new w-75 rounded-4 mx-auto d-block">
