--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@
           
         </div>
 
-        <div class="input-group mb-3 shadow rounded-pill">
-          <input type="text" class="form-control rounded-pill" placeholder="Your email" aria-label="Your email" aria-describedby="basic-addon2">
-          <button type="submit"  class="input-group-text rounded-pill bg-danger text-white py-2  px-3" id="basic-addon2">Subscribe</button>
+        <div class="mx-auto text-center rounded-pill">
+          <input type="text" class=" mx-auto rounded-pill px-2 py-2 " placeholder="Your email" aria-label="Your email" >
+          <button type="submit"  class="rounded-pill bg-danger  mx-auto text-white py-2  " id="basic-addon2">Subscribe</button>
         </div>
         
 
